objects/LAT_CTY_B2B_Settings__c.object
<CustomObject>
    <fields>
        <fullName>LAT_CTY_B2B_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_CTY_B2B_Blocked_From__c</fullName>
        <label>Blocked From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_CTY_B2B_Blocked_To__c</fullName>
        <label>Blocked To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_CTY_B2B_Is_Blocked__c</fullName>
        <description>Is B2B Site Blocked ?</description>
        <formula>AND( LAT_CTY_B2B_Active__c  ,AND( (NOW() &gt;= LAT_CTY_B2B_Blocked_From__c ) , ( NOW() &lt;=  LAT_CTY_B2B_Blocked_To__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is B2B Site Blocked ?</inlineHelpText>
        <label>Is Blocked ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_CTY_B2B_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>CTY B2B Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_CTY_B2B_Blocked_From__c</columns>
        <columns>LAT_CTY_B2B_Blocked_To__c</columns>
        <columns>LAT_CTY_B2B_Is_Blocked__c</columns>
        <columns>LAT_CTY_B2B_Active__c</columns>
        <columns>LAT_CTY_B2B_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LAT_CTY_B2B_Bloqueos_esta_semana</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Bloqueos esta semana</label>
    </listViews>
    <nameField>
        <displayFormat>B2B-{000000}</displayFormat>
        <label>CTY B2B Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTY B2B Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>